update website content
- start draft on post
- adjust footer
- adjust home page content

--- a/config.yaml
+++ b/config.yaml
@@ -53,9 +53,9 @@ params:
   homeInfoParams:
     Title: "Welcome to ✨Starlog✨"
     Content: |
-      Hi, I'm Cristian Aldea
+      Hi, I'm Cristian Aldea.
 
-      As I travel and learn about the universe, I'll do my best to log my discoveries here for anyone who might need them.
+      As I travel across the universe, I'll log my discoveries here to share them with everyone.
 
       I hope you have a nice day :)
 
