publish second article
revised text, fixed typos and other errors

added categories page

--- a/config.yaml
+++ b/config.yaml
@@ -97,10 +97,14 @@ menu:
       name: Tags
       url: /tags/
       weight: 2
+    - identifier: categories
+      name: Categories
+      url: /categories/
+      weight: 3
     - identifier: example
       name: cristianaldea.com
       url: https://www.cristianaldea.com
-      weight: 3
+      weight: 4
 
 outputs:
   home:
