publish new post

--- a/config.yaml
+++ b/config.yaml
@@ -55,7 +55,7 @@ params:
     Content: |
       Hi, I'm Cristian Aldea!
 
-      This is a blog where I wrote polished posts exploring and teaching about various topics. Reach out to me if you have any questions.
+      This is a blog where I write polished posts exploring various topics. I hope you learn something.
 
       Happy reading :)
 
