improve wording and structure of last post

--- a/config.yaml
+++ b/config.yaml
@@ -55,7 +55,9 @@ params:
     Content: |
       Hi, I'm Cristian Aldea!
 
-      This is a blog where I write polished posts exploring various topics. I hope you learn something.
+      This is my personal blog where I write polished posts exploring various topics that interest me.
+
+      I hope you'll find my content interesting and informative.
 
       Happy reading :)
 
